--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Prueba Git</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Prueba de uso Git</h1>
+    <p>Soy una prueba</p>
+  </body>
 </html>
