--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prueba Git</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Prueba de uso Git</h1>
